--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       a,
       label,
       option {
-        font-size: 2rem;
+        font-size: 1.5rem;
         color: rgb(82, 81, 81);
       }
 
@@ -72,6 +72,7 @@
         color: gray;
         text-transform: uppercase;
         margin: 2rem auto 2rem auto;
+        text-align: center;
       }
 
       h2::after {
@@ -125,7 +126,7 @@
       .header-main {
         display: flex;
         flex-direction: column;
-        margin: 16vh 20%;
+        margin: 16vh 10%;
       }
       ul.nav-items {
         display: flex;
@@ -174,6 +175,16 @@
       a.btn-empty:hover {
         color: white;
         background: #f63854;
+      }
+
+      .header-main-btn-group {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-content: center;
+        align-items: center;
+        gap: 2rem;
+        align-content: start;
       }
       /* END : Page header*/
     </style>
@@ -285,7 +296,7 @@
       <section id="details" class="follow">
         <h2 class="section-header">steps to follow</h2>
         <div class="container-parent__follow">
-          <div>
+          <div class="follow_image_container">
             <img src="./assets/images/Capture.PNG" alt="" />
           </div>
           <div class="follow-steps-container">
