--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       a,
       label,
       option {
-        font-size: 1.5rem;
+        font-size: 1.7rem;
         color: rgb(82, 81, 81);
       }
 
@@ -109,16 +109,14 @@
       /* START : Page header*/
       header {
         width: 100%;
-        height: 80vh;
+        min-height: 80vh;
         background: url("./assets/images/foodiesfeed.com_pizza-ready-for-baking.jpg")
           no-repeat center;
         background-size: cover;
         position: relative;
       }
       .header-layer {
-        position: absolute;
-        top: 0;
-        left: 0;
+        min-height: 80vh;
         background-color: rgba(0, 0, 0, 0.7);
         width: 100%;
         height: 100%;
@@ -126,7 +124,7 @@
       .header-main {
         display: flex;
         flex-direction: column;
-        margin: 16vh 10%;
+        padding: 16vh 10%;
       }
       ul.nav-items {
         display: flex;
@@ -139,7 +137,7 @@
       }
 
       .navigation {
-        margin: 2.5rem;
+        padding: 2.5rem;
         position: sticky;
         top: 0px;
       }
