--- a/index.html
+++ b/index.html
@@ -10,13 +10,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Food Subscription</title>
+    <!--Smaprt way to preload the font style-->
     <link
-      rel="stylesheet"
+      rel="preload"
       href="https://fonts.googleapis.com/css2?family=Kanit&display=swap"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
     />
+    <!-- Backup, in case javascript is not enabled in browser-->
+    <noscript>
+      <link
+        rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Kanit&display=swap"
+      />
+    </noscript>
     <link
-      rel="stylesheet"
+      rel="preload"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript>
+      <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      />
+    </noscript>
+    <link
+      rel="preload"
+      href="./assets/images/foodiesfeed.com_pizza-ready-for-baking-min.jpg"
+      as="image"
     />
     <!--Critical CSS-->
     <style>
@@ -110,7 +133,7 @@
       header {
         width: 100%;
         min-height: 80vh;
-        background: url("./assets/images/foodiesfeed.com_pizza-ready-for-baking.jpg")
+        background: url("./assets/images/foodiesfeed.com_pizza-ready-for-baking-min.jpg")
           no-repeat center;
         background-size: cover;
         position: relative;
@@ -137,9 +160,16 @@
       }
 
       .navigation {
-        padding: 2.5rem;
-        position: sticky;
+        position: fixed;
+        background: rgba(27, 38, 49, 0.5);
+        background-attachment: fixed;
+        overflow: hidden;
         top: 0px;
+        right: 0;
+        height: 9rem;
+        width: 100%;
+        z-index: 1;
+        padding: 2.5rem;
       }
 
       .nav-item-link {
@@ -295,7 +325,12 @@
         <h2 class="section-header">steps to follow</h2>
         <div class="container-parent__follow">
           <div class="follow_image_container">
-            <img src="./assets/images/Capture.PNG" alt="" />
+            <img
+              src="./assets/images/Capture-min.PNG"
+              alt=""
+              width="100%"
+              height="100%"
+            />
           </div>
           <div class="follow-steps-container">
             <div class="follow-steps">
@@ -332,7 +367,7 @@
             <div class="card__review">
               <img
                 class="card__review-img"
-                src="./assets/images/customer.jpg"
+                src="./assets/images/customer-min.jpg"
                 alt=""
               />
               <h3 class="card__review-name">david smith</h3>
@@ -352,7 +387,7 @@
             <div class="card__review">
               <img
                 class="card__review-img"
-                src="./assets/images/customer.jpg"
+                src="./assets/images/customer-min.jpg"
                 alt=""
               />
               <h3 class="card__review-name">david smith</h3>
@@ -372,7 +407,7 @@
             <div class="card__review">
               <img
                 class="card__review-img"
-                src="./assets/images/customer.jpg"
+                src="./assets/images/customer-min.jpg"
                 alt=""
               />
               <h3 class="card__review-name">david smith</h3>
@@ -488,7 +523,7 @@
         <h2 class="section-header">contact us</h2>
         <div class="form-container-parent">
           <div class="contact-video">
-            <video src="./assets/videos/Avocado.mp4" autoplay loop muted>
+            <!-- <video src="./assets/videos/Avocado.mp4" autoplay loop muted>
               <track
                 label="English"
                 kind="subtitles"
@@ -496,7 +531,13 @@
                 src="./assets/sintel-en.vtt"
                 default
               />
-            </video>
+            </video> -->
+            <img
+              src="./assets/images/Avocado.gif"
+              alt="AvocadoImage"
+              width="100%"
+              height="100%"
+            />
           </div>
           <div class="contact-form">
             <form action="">
